# project-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.pt-BR.md  pyproject.toml
.github/workflows/: ci.yml
src/project_mcp/: __init__.py  awp.py  lps.py  mspdi.py  pbip_writer.py  server.py  sidecar.py
tests/: test_awp.py  test_lps.py  test_mspdi.py
tests/fixtures/: sample.xml
