[project]
name = "project-mcp"
version = "0.1.0"
description = "MCP server for reading Microsoft Project files (MSPDI XML and .mpp)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Jeff Borges", email = "borgeslimamodeler@gmail.com" }
]
keywords = ["mcp", "microsoft-project", "mspdi", "project-management", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "mcp[cli]>=1.4.1",
]

[project.optional-dependencies]
mpp = [
    "mpxj>=14.0.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
]

[project.scripts]
project-mcp = "project_mcp.server:main"

[project.urls]
Homepage = "https://github.com/jeffmodeler/project-mcp"
Issues = "https://github.com/jeffmodeler/project-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
